force-app/main/default/objects/Daily_Book__c/Daily_Book__c.object-meta.xml
<CustomObject>
    <description>Object to create a daily book and overdue</description>
    <label>Daily Book</label>
    <nameField>
        <displayFormat>DB-{0000}</displayFormat>
        <label>Daily Book Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>