force-app/main/default/objects/Daily_Book__c/fields/Advance_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Advance_Amount_USD__c</fullName>
    <inlineHelpText>Same logic</inlineHelpText>
    <label>Advance Amount USD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>