force-app/main/default/objects/Daily_Book__c/fields/Number_of_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Invoices__c</fullName>
    <inlineHelpText>Number of Invoices for the book</inlineHelpText>
    <label>Number of Invoices</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>