force-app/main/default/objects/Daily_Book__c/fields/Overdue_Advanced_amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Advanced_amount_USD__c</fullName>
    <label>Overdue Advanced amount USD</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>