force-app/main/default/objects/Daily_Book__c/fields/Overdue_Invoice_amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Invoice_amount_USD__c</fullName>
    <label>Overdue Invoice amount USD</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>