force-app/main/default/objects/Daily_Book__c/fields/Overdue_Number_invoice__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Number_invoice__c</fullName>
    <label>Overdue Number invoice</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>