force-app/main/default/objects/Daily_Book__c/fields/Overdue_Real_Face_Value_USD__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Real_Face_Value_USD__c</fullName>
    <label>Overdue Real Face Value USD</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>