force-app/main/default/objects/Daily_Book__c/fields/Real_Face_Value_USD__c.field-meta.xml
<CustomField>
    <fullName>Real_Face_Value_USD__c</fullName>
    <inlineHelpText>Sum of all Real Face value USD for invoice in progress</inlineHelpText>
    <label>Real Face Value USD</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>